fixing vertical align for button mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -10,6 +10,8 @@
     background-image: url("../img/me.jpg");
     background-size: cover;
     max-height: 100%;
+  }
+  .site-wrapper-inner {
     vertical-align: bottom;
   }
 }
@@ -20,6 +22,8 @@
     background-image: url("../img/me.jpg");
     background-size: cover;
     max-height: 100%;
+  }
+  .site-wrapper-inner {
     vertical-align: bottom;
   }
 }
